fix packagists invalid name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ptcong/phpThumb",
+    "name": "ptcong/phpthumb",
     "description": "Thumbnail lib from http://phpthumb.gxdlabs.com/ (included watermark plugin)",
     "license": "MIT",
     "authors": [{
