--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "php": ">=5.0"
     },
     "autoload": {
-        "classmap": "/"
+        "classmap": ["/"]
     },
     "minimum-stability": "dev"
 }
